--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ohmyfood",
+  "name": "ohmyfood",
   "version": "1.0.0",
   "description": "Reservation en ligne",
   "main": "index.js",
