--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/ChristineDELACOURT/WebDevelopperProjet3"
   },
-  "author": "gerkx",
+  "author": "ChristineDELACOURT",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ChristineDELACOURT/WebDevelopperProjet3/issues"
